fixed bug on safari and adjusted readme

--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,11 @@ body{
 }
 
 .card:hover, .card:focus{
-    transform: rotateY(180deg);
+    transform: rotateY(180deg) translateZ(1px);
 }
 
 .card:hover .card__informatie, .card:focus .card__informatie{
-    transform: rotateY(-180deg);
+    transform: rotateY(-180deg) translateZ(1px);
 
 }
 
@@ -59,7 +59,7 @@ body{
     z-index: 1;
     padding: 4rem;
     background: #F3F1F5;
-    transform: rotateY(180deg);
+    transform: rotateY(180deg) translateZ(1px);
     backface-visibility: hidden;
 }
 
@@ -90,7 +90,7 @@ body{
 .card__stop--streep{
     position:absolute;
     top:50%;
-    transform:translateY(-50%);
+    transform:translateY(-50%) translateZ(1px);
     width:110%;
     height:20%;
     background: white;
@@ -116,7 +116,7 @@ body{
 .card__advies-subheading{
     color:white;
     font-size: 300%;
-    transform:translateY(-40%);
+    transform:translateY(-40%) translateZ(1px);
     letter-spacing: 0.2rem;
 }
 
@@ -136,11 +136,11 @@ body{
 }
 
 .card__parkeerverbod-streep--eerste{
-    transform:rotate(-45deg);
+    transform:rotate(-45deg)  translateZ(1px);
 }
 
 .card__parkeerverbod-streep--tweede{
-    transform:rotate(45deg);
+    transform:rotate(45deg)  translateZ(1px);
 }
 
 .card__stop--streep-klein{
@@ -163,7 +163,7 @@ body{
     position:absolute;
     top:50%;
     left:50%;
-    transform:translate(-50%,-50%);
+    transform:translate(-50%,-50%)  translateZ(1px);
 }
 
 .aanhanger__wiel{
@@ -213,7 +213,7 @@ body{
     display:flex;
     justify-content: center;
     align-items: center;
-    transform:translateY(-5%);
+    transform:translateY(-5%)  translateZ(1px);
 }
 
 .card__figure--onverplicht-fietspad--einde{
@@ -222,7 +222,7 @@ body{
 .card__figure--onverplicht-fietspad--einde::before{
     content:"";
     position: absolute;
-    transform:rotate(-15deg);
+    transform:rotate(-15deg)  translateZ(1px);
     top:60%;
     left:-50%;
     height:25%;
@@ -233,7 +233,7 @@ body{
 }
 
 .card__figure--voorrang{
-    transform: rotate(45deg);
+    transform: rotate(45deg)  translateZ(1px);
     width:30%;
     height:30%;
     background:var(--voorrang-geel);
@@ -252,7 +252,7 @@ body{
     background:black;
     position: absolute;
     top:-25%;
-    transform: translateX(-50%);
+    transform: translateX(-50%)  translateZ(1px);
 }
 
 .card__voorrang-einde-streep--eerste{
